Added basics for chat

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,27 @@
         <h1>SANO</h1>
     </header>
 
-    <input type="text"/>
+    <div id="chat">
+        <h2>Chat</h2>
+        <ul>
+            <li class="server">Some generic info and <a href="#">a link</a></li>
+            <li class="remote">Blegh</li>
+            <li class="remote">Blegh</li>
+            <li class="remote">Blegh</li>
+            <li class="remote">Blegh</li>
+            <li class="remote">Blegh</li>
+            <li class="remote">Blegh</li>
+            <li class="remote">Blegh</li>
+            <li class="remote">Blegh</li>
+
+        </ul>
+    </div>
 </div>
 
+<input id="chat-input-mobile" type="text" placeholder="Enter a message"/>
+
+<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
